# yap

./: Cargo.toml  LICENSE  README.md
githooks/: pre-push
scripts/: gen_readme.bash
src/: annotate.rs  chat.rs  chatlog.rs  complete.rs  config.rs  constants.rs  db.rs  err.rs  main.rs  openai.rs  recap.rs  scaffold.rs  term.rs
src/openai/: assistants_api.rs  chat_api.rs  mod.rs
