[package]
name = "yap"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
ureq = { version = "2.10.1", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4"] }
